*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.9 ===
* Updated build scripts and dependencies.

=== 1.0.8 ===
* Updated build scripts and dependencies.

=== 1.0.7 ===
* Updated build scripts and dependencies.

=== 1.0.6 ===
* Updated build scripts and dependencies.

=== 1.0.5 ===
* Updated build scripts and dependencies.

=== 1.0.4 ===
* Updated build scripts and dependencies.

=== 1.0.3 ===
* Updated build scripts and dependencies.

=== 1.0.2 ===
* Updated build scripts and dependencies.

=== 1.0.1 ===
* Updated build scripts and dependencies.

=== 1.0.0 ===
* Initial version.
* Updated build scripts and dependencies.
