@@ -1,0 +1,5 @@
+{
+	"mixer": {
+		"channel": "Канал #{@id}"
+	}
+}
