@@ -1,0 +1,5 @@
+{
+	"mixer": {
+		"channel": "Channel #{@id}"
+	}
+}
