@@ -346,7 +346,7 @@ namespace lsp
             LSP_PLUGINS_MIXER_VERSION,
             plugin_classes,
             clap_features_mono,
-            E_DUMP_STATE,
+            E_DUMP_STATE | E_KVT_SYNC,
             mixer_x4_mono_ports,
             "util/mixer/mono.xml",
             NULL,
@@ -373,7 +373,7 @@ namespace lsp
             LSP_PLUGINS_MIXER_VERSION,
             plugin_classes,
             clap_features_mono,
-            E_DUMP_STATE,
+            E_DUMP_STATE | E_KVT_SYNC,
             mixer_x8_mono_ports,
             "util/mixer/mono.xml",
             NULL,
@@ -400,7 +400,7 @@ namespace lsp
             LSP_PLUGINS_MIXER_VERSION,
             plugin_classes,
             clap_features_mono,
-            E_DUMP_STATE,
+            E_DUMP_STATE | E_KVT_SYNC,
             mixer_x16_mono_ports,
             "util/mixer/mono.xml",
             NULL,
@@ -427,7 +427,7 @@ namespace lsp
             LSP_PLUGINS_MIXER_VERSION,
             plugin_classes,
             clap_features_stereo,
-            E_DUMP_STATE,
+            E_DUMP_STATE | E_KVT_SYNC,
             mixer_x4_stereo_ports,
             "util/mixer/stereo.xml",
             NULL,
@@ -454,7 +454,7 @@ namespace lsp
             LSP_PLUGINS_MIXER_VERSION,
             plugin_classes,
             clap_features_stereo,
-            E_DUMP_STATE,
+            E_DUMP_STATE | E_KVT_SYNC,
             mixer_x8_stereo_ports,
             "util/mixer/stereo.xml",
             NULL,
@@ -481,7 +481,7 @@ namespace lsp
             LSP_PLUGINS_MIXER_VERSION,
             plugin_classes,
             clap_features_stereo,
-            E_DUMP_STATE,
+            E_DUMP_STATE | E_KVT_SYNC,
             mixer_x16_stereo_ports,
             "util/mixer/stereo.xml",
             NULL,
