@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 1.0.9 ===
+* Added possibility to enter channel name in mixer.
 * Updated build scripts and dependencies.
 
 === 1.0.8 ===
